syntax="proto3";

option go_package="github.com/essayZW/hpcmanager/user/proto;user";

package user;

import "proto/ping.proto";
import "proto/common.proto";
import "gateway/proto/baserequest.proto";
import "proto/userpublic.proto";

service GroupService {
    rpc Ping(publicproto.Empty) returns (publicproto.PingResponse) {}
    rpc GetGroupInfoByID(GetGroupInfoByIDRequest) returns (GetGroupInfoByIDResponse) {}
    rpc PaginationGetGroupInfo(PaginationGetGroupInfoRequest) returns (PaginationGetGroupInfoResponse) {}
}


message GetGroupInfoByIDRequest {
    request.BaseRequest baseRequest = 1;
    int32 groupID = 2;
}

message GetGroupInfoByIDResponse {
    user.GroupInfo groupInfo = 1;
}

message PaginationGetGroupInfoRequest {
    request.BaseRequest baseRequest = 1;
    int32 pageSize = 2;
    int32 pageIndex = 3;
}

message PaginationGetGroupInfoResponse {
    repeated user.GroupInfo groupInfos = 1;
}
